<resources>
    <string name="app_name">SmartBin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profil">profil</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="remember_me">Remember me</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="password">Password</string>
    <string name="not_yet_registered_sign_up_now">Not yet registered? Sign Up Now</string>
    <string name="login">Login</string>
    <string name="smart_bin">SMART BIN</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_please_login">already have an account? please LogIn</string>
</resources>