<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/orange_clair"
        android:alpha="0.7"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_above="@id/card_view"
        android:padding="28dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:src="@drawable/logo2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/smart_bin"
            android:textColor="@color/blanc"
            android:textSize="40sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-20dp"
        android:id="@+id/card_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Welcome"
                android:textColor="@color/orange"
                android:textSize="32sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Please login with your informations"
                android:alpha="0.7"/>

           <EditText
               android:id="@+id/email"
                    android:hint="example@gmail.com"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
              />

           <EditText
                    android:id="@+id/password"
                    android:hint="@string/password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remember_me"
                    android:layout_centerVertical="true"
                    android:alpha="0.7"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/i_forgot_my_password"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>


            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orange"
                android:textColor="@color/blanc"
                android:text="@string/login" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonSignup"
                android:text="@string/not_yet_registered_sign_up_now" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
