<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/vert"
        android:alpha="0.7"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_above="@id/card_view"
        android:padding="28dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smart_bin"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:textSize="32sp"
            android:textColor="@color/blanc"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-20dp"
        android:id="@+id/card_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Welcome"
                android:textColor="@color/vert"
                android:textSize="32sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Please sign up with your informations"
                android:alpha="0.7"/>

            <TextView
                android:id="@+id/textViewNom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Firt name"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/Nom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/textViewPrenom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Last name"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/Prenom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                tools:ignore="Autofill" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="E-mail"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:drawableEnd="@drawable/done_icon"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <TextView
                android:id="@+id/textViewMotDePasse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/password_icon"
                android:autofillHints=""
                tools:ignore="LabelFor" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remember_me"
                    android:layout_centerVertical="true"
                    android:alpha="0.7"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="I forgot my password"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <Button
                android:id="@+id/buttonSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blanc"
                android:backgroundTint="@color/vert"
                android:text="@string/sign_up" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonLogin"
                android:text="@string/already_have_an_account_please_login" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>